# globus-compute-golf-demo

./: .pre-commit-config.yaml  Perlin Noise Heightmap.py  README.md  README.txt  Refactored code for simulation.py  pybullet sim1.py  pybullet sim2(bowl shape).py  pyproject.toml  run.py  run_globus_compute.py  run_single.py  simulate.py
.github/workflows/: lints.yml  tests.yml
perlin-terrain/: generate.py  requirements.txt
simulation/: __init__.py  config.py  plot.py  simulate.py
