[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation"
version = "0.1.0"
authors = [
    {name = "Sathvick Sudarsan", email = "sathvicksudarsan@gmail.com"},
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
    {name = "Globus Labs"},
]
description = "Globus Compute golf simulation demo"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "globus-compute-endpoint",
    "globus-compute-sdk",
    "matplotlib",
    "noise",
    "numpy<2",
    "pybullet",
    "scipy",
]

[project.optional-dependencies]
dev = ["mypy", "pre-commit", "ruff"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disable_error_code = "import-untyped"
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "Q",
    "T10",
    "SIM",
    "PLE", "PLW",
    "RUF",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["simulation"]
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.setuptools]
packages = ["simulation"]
include-package-data = true
